trabajando en las actividades

--- a/src/components/productos/style.scss
+++ b/src/components/productos/style.scss
@@ -6,3 +6,12 @@
     height: 80vh;
     width: 100vw;
 }
+
+.pageRow {
+    max-width: 95vw;
+    padding-left: 15vw !important;
+    padding-right: 15vw !important;
+    padding-top: 25vh !important;
+    padding-block: 25vh !important;
+    width: 95vw !important;
+}
