--- a/src/components/registrarse/style.scss
+++ b/src/components/registrarse/style.scss
@@ -1,14 +1,46 @@
 @import '../../App';
 
 .registration-form-container {
-  padding-top: 25vh;
-}
-
-.form-floating {
-  color: #8f96a3;
+    padding-top: 25vh;
 }
 
 .form-control-custom {
     width: 100%;
     height: 12vh;
+}
+
+.error-message {
+    color: red;
+    font-size: 14px;
+    margin-bottom: 15px;
+    white-space: pre-wrap; /* Permite los saltos de línea */
+}
+
+/* Ajusta el tamaño de todos los FloatingLabel para que sean uniformes */
+.floating-label-custom .form-control,
+.floating-label-custom .form-select {
+    height: calc(3.5rem + 2px);
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+/* Asegura que los inputs sean del mismo tamaño */
+.floating-label-custom {
+    width: 100%;
+    height: 4rem; /* Ajusta la altura según sea necesario */
+}
+
+input[type="text"], input[type="email"], input[type="password"] {
+    width: 100%;
+    box-sizing: border-box;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.btn {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
