--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,15 @@ $danger: #dc3545 !default;
 $info: #3d7895 !default;
 $success: #898C3F !default;
 
+
+$container-max-widths: (
+  sm: 100%,
+  md: 100%,
+  lg: 100%,
+  xl: 100%,
+  xxl: 100%,
+) !default;
+
 $font-family-base: (
         '-apple-system',
         'BlinkMacSystemFont',
@@ -18,6 +27,7 @@ $font-family-base: (
         '"Segoe UI Emoji"',
         '"Segoe UI Symbol"'
 );
+
 // Option B: Include parts of Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
@@ -34,41 +44,34 @@ $font-family-base: (
 @import "~bootstrap/scss/containers";
 @import "~bootstrap/scss/grid";
 
+
+
 // 4. Add additional custom code here
-
-.root-container {
-  max-height: 94vh;
-  max-width: 100vw;
-  padding: 0 !important;
-}
-
 .row {
-  max-width: 100vw;
   padding: 0 !important;
   margin: 0;
-
-}
-.pageContainer{
-    color: white ;
-    text-align: center;
-    background-color: $secondary ;
-    height: 100vh;
-    width: 100vw;
-}
-.pageContainerFooter{
-    color: white ;
-    text-align: center;
-    background-color: $secondary ;
-    height: 92vh;
-    width: 100vw;
-}
-.pageContainerNavFooter{
-    color: white ;
-    text-align: center;
-    background-color: $secondary ;
-    height: 85.6vh;
-    width: 100vw;
 }
 .footer{
   color :white;
+}
+.custom{
+  min-height: 100vh !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+.mid-container{
+
+  height: 100%;
+  padding: 0;
+  background-color: $secondary;
+
+}
+
+.pageRow {
+  margin: 0;
+  padding: 0;
+  min-height: 85.4vh;
+  box-sizing: border-box;
+  justify-content: center;
+
 }
