--- a/src/components/reserva/style.scss
+++ b/src/components/reserva/style.scss
@@ -1,14 +1,15 @@
 @import '../../App';
-
-.registration-form-container {
-  padding-top: 25vh;
+.reserve-form {
+    padding: 1vw 1vh 1vh 1vw;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
-.form-floating {
-  color: #8f96a3;
+.custom-calendar {
+    width: 100%!important;
 }
-
-.form-control-custom {
-    width: 100%;
-    height: 12vh;
+.myReserve:disabled{
+    background-color: rgba(246, 66, 66, 0.66);
+    color: #0a1206;
 }
