--- a/src/components/reserva/style.scss
+++ b/src/components/reserva/style.scss
@@ -1,15 +1,35 @@
 @import '../../App';
+
 .reserve-form {
-    padding: 1vw 1vh 1vh 1vw;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  padding: 1vw 1vh 1vh 1vw;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .custom-calendar {
-    width: 100%!important;
+  width: 100% !important;
 }
-.myReserve:disabled{
-    background-color: rgba(246, 66, 66, 0.66);
-    color: #0a1206;
+
+.myReserve {
+  background-color: rgba(255, 140, 0, 0.66);
+}
+
+.myReserve:disabled {
+  background-color: rgba(246, 66, 66, 0.66);
+  color: #0a1206;
+}
+
+.timeSchedule {
+  text-align: center;
+  padding: 1px !important;
+}
+.timeButton{
+  background: white !important;
+  color: black !important;
+  width: 100%;
+}
+.timeButton:hover{
+  background-color: rgba(66, 66, 66, 0.42) !important;
+  color: rgba(255, 255, 255, 0.7) !important;
 }
